// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getBlockByTag > should fetch and cache the block from rpc if it does not exist 1`] = `
{
  "header": {
    "baseFeePerGas": "0x1",
    "blobGasUsed": "0x0",
    "coinbase": "0x4200000000000000000000000000000000000011",
    "difficulty": "0x0",
    "excessBlobGas": "0x0",
    "extraData": "0x",
    "gasLimit": "0x1c9c380",
    "gasUsed": "0x0",
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "mixHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "nonce": "0x0000000000000000",
    "number": "0x7510430",
    "parentBeaconBlockRoot": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
    "parentHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "receiptTrie": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
    "requestsRoot": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
    "stateRoot": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
    "timestamp": "0x7510430",
    "transactionsTrie": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
    "uncleHash": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
    "withdrawalsRoot": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
  },
  "requests": [],
  "transactions": [],
  "uncleHeaders": [],
  "withdrawals": [],
}
`;

exports[`getBlockByTag > should throw UnknownBlockError if tag doesn not exist 1`] = `
[UnknownBlock: safe

Docs: https://tevm.sh/reference/tevm/errors/classes/unknownblockerror/
Version: 1.0.0-next.148]
`;

exports[`getBlockByTag > should throw an error if the block does not exist 1`] = `
[UnknownBlock: Block number 69 does not exist

Docs: https://tevm.sh/reference/tevm/errors/classes/unknownblockerror/
Version: 1.0.0-next.148]
`;

exports[`getBlockByTag > should throw an error if the block does not exist 2`] = `
[UnknownBlock: Block with hash 0x99de01954c5e3e1b93fb66d009727468b8feca45c0bb373535eafedc2cb1bfdf does not exist

Docs: https://tevm.sh/reference/tevm/errors/classes/unknownblockerror/
Version: 1.0.0-next.148]
`;
